Fix permissions & entrypoint cmds